--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==2.1.1
 click==8.1.3
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==7.0.1
 Django==4.1.4
 django-stubs==1.13.1
 django-stubs-ext==0.7.0
@@ -32,6 +33,7 @@ pluggy==1.0.0
 pycodestyle==2.10.0
 pyflakes==3.0.1
 pytest==7.2.0
+pytest-cov==4.0.0
 pytest-django==4.5.2
 pytz==2022.7
 requests==2.28.1
