--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ djangorestframework-stubs==1.8.0
 drf-yasg==1.21.4
 drf-yasg-stubs==0.1.4
 exceptiongroup==1.1.0
+Faker==15.3.4
 flake8==6.0.0
 idna==3.4
 inflection==0.5.1
@@ -35,10 +36,12 @@ pyflakes==3.0.1
 pytest==7.2.0
 pytest-cov==4.0.0
 pytest-django==4.5.2
+python-dateutil==2.8.2
 pytz==2022.7
 requests==2.28.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
+six==1.16.0
 sqlparse==0.4.3
 tomli==2.0.1
 types-pytz==2022.7.0.0
