--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,11 @@
 name: ci
 
-on:
-  push
+on: push
 
 env:
   DEBUG: 1
 
 jobs:
-
   lint:
     runs-on: ubuntu-latest
     timeout-minutes: 5
@@ -17,12 +15,12 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v3
         with:
-          python-version: 3.10.8
+          python-version: 3.11.7
       - name: Setup Dependencies
         run: python -m venv ./venv && source venv/bin/activate && python -m pip install --upgrade pip && pip install -r requirements.txt
       - run: source venv/bin/activate && python --version
       - name: Lint
-        run: source venv/bin/activate && make lint_ci
+        run: source venv/bin/activate && make lint
 
   test:
     runs-on: ubuntu-latest
@@ -33,7 +31,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v3
         with:
-          python-version: 3.10.8
+          python-version: 3.11.7
       - name: Setup Dependencies
         run: python -m venv ./venv && source venv/bin/activate && python -m pip install --upgrade pip && pip install -r requirements.txt
       - run: source venv/bin/activate && python --version
