--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = service.settings
+DJANGO_SETTINGS_MODULE = mygreatproject.settings
 
 python_files = test_*.py
 norecursedirs = venv
