--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,34 @@
-asgiref==3.6.0
-attrs==22.2.0
-black==22.12.0
-certifi==2022.12.7
-charset-normalizer==2.1.1
-click==8.1.3
-coreapi==2.3.3
-coreschema==0.0.4
-coverage==7.0.1
-Django==4.1.4
-django-stubs==1.13.1
-django-stubs-ext==0.7.0
+boto3-stubs[essential,polly,mediaconvert]==1.34.*
+boto3==1.34.*
+celery-types==0.14.0
+celery==5.2.7
+dj-database-url==1.0.0
+django_jsonform==2.15.*
+django-loginas==0.3.11
+django-stubs-ext==0.5.0
+django-stubs==1.12.0
+Django==5.0.3
+djangorestframework-dataclasses==1.2.*
+djangorestframework-stubs==1.7.0
 djangorestframework==3.14.0
-djangorestframework-stubs==1.8.0
-drf-yasg==1.21.4
-drf-yasg-stubs==0.1.4
-exceptiongroup==1.1.0
-Faker==15.3.4
-flake8==6.0.0
-idna==3.4
-inflection==0.5.1
-iniconfig==1.1.1
-isort==5.11.4
-itypes==1.2.0
-Jinja2==3.1.2
-MarkupSafe==2.1.1
-mccabe==0.7.0
-mypy==0.991
+drf-yasg-stubs==0.1.*
+drf-yasg==1.21.*
+factory_boy==3.2.1
+Faker==15.0.0
+fakeredis==2.16.*
+filelock==3.*
+flake8==5.0.4
+gunicorn==20.1.0
 mypy-extensions==0.4.3
-packaging==22.0
-pathspec==0.10.3
-platformdirs==2.6.0
-pluggy==1.0.0
-pycodestyle==2.10.0
-pyflakes==3.0.1
-pytest==7.2.0
+mypy==0.961
+psycopg2-binary==2.9.3
 pytest-cov==4.0.0
 pytest-django==4.5.2
-python-dateutil==2.8.2
-pytz==2022.7
-requests==2.28.1
-ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.7
-six==1.16.0
-sqlparse==0.4.3
-tomli==2.0.1
-types-pytz==2022.7.0.0
-types-PyYAML==6.0.12.2
-types-requests==2.28.11.7
-types-urllib3==1.26.25.4
-typing_extensions==4.4.0
-uritemplate==4.1.1
-urllib3==1.26.13
+pytest==7.1.3
+python-dotenv==0.21.*
+python-magic==0.4.27
+redis==4.3.4
+ruff==0.1.13
+sentry-sdk==1.40.4
+types-dj-database-url==1.0.0
+whitenoise==6.2.0
