--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         run: python -m venv ./venv && source venv/bin/activate && python -m pip install --upgrade pip && pip install -r requirements.txt
       - run: source venv/bin/activate && python --version
       - name: Run Tests
-        run: source venv/bin/activate && make run_python_tests
+        run: source venv/bin/activate && make test
       - name: Stop Containers
         run: docker-compose -f ci/docker-compose.yml down
         if: always()
